# SolidAngle

./: .gitignore  .gitmodules  README.md  SolidAngle.sln  SolidAngle2019.sln
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Private/Async/: TaskGraph.cpp
Engine/Source/Runtime/Core/Private/Containers/: LockFreeList.cpp  StackTracker.cpp  String.cpp
Engine/Source/Runtime/Core/Private/Features/: ModularFeatures.cpp  ModularFeatures.h
Engine/Source/Runtime/Core/Private/GenericPlatform/: CorePrivatePCH.h  GenericApplication.cpp  GenericPlatformCrashContext.cpp  GenericPlatformFile.cpp  GenericPlatformMallocCrash.cpp  GenericPlatformMath.cpp  GenericPlatformMemory.cpp  GenericPlatformMisc.cpp  GenericPlatformNamedPipe.cpp  GenericPlatformOutputDevices.cpp  GenericPlatformProcess.cpp  GenericPlatformProperties.cpp  GenericPlatformSplash.cpp  GenericPlatformStackWalk.cpp  GenericPlatformString.cpp  GenericPlatformSymbolication.cpp  GenericPlatformTime.cpp  GenericWindow.cpp  StandardPlatformString.cpp
Engine/Source/Runtime/Core/Private/HAL/: ConsoleManager.cpp  ExceptionHandling.cpp  FileManagerGeneric.cpp  IPlatformFileLogWrapper.cpp  MallocAnsi.cpp  MallocBinned.cpp  MallocBinned2.cpp  MallocJemalloc.cpp  MallocLeakDetection.cpp  MallocStomp.cpp  MallocTBB.cpp  MemoryBase.cpp  PThreadRunnableThread.h  PlatformFileManager.cpp  SolidAngleMemory.cpp  ThreadHeartBeat.cpp  ThreadingBase.cpp
Engine/Source/Runtime/Core/Private/Internationalization/: Culture.cpp  FastDecimalFormat.cpp  ICUCulture.cpp  ICUCulture.h  ICUUtilities.cpp  ICUUtilities.h  Internationalization.cpp  InvariantCulture.h  LegacyCulture.cpp  LegacyCulture.h  LegacyInternationalization.cpp  LegacyInternationalization.h  LegacyText.cpp  Text.cpp  TextCache.cpp  TextCache.h  TextData.h  TextFormatArgumentModifier.cpp  TextFormatArgumentModifier.h  TextFormatter.cpp  TextHistory.cpp  TextHistory.h  TextLocalizationManager.cpp  TextNamespaceUtil.cpp
Engine/Source/Runtime/Core/Private/Logging/: LogCategory.cpp  LogMacros.cpp  LogScopedCategoryAndVerbosityOverride.cpp  LogSuppressionInterface.cpp  MessageLog.cpp  TokenizedMessage.cpp
Engine/Source/Runtime/Core/Private/Math/: BasicMathExpressionEvaluator.cpp  Box.cpp  Box2D.cpp  BoxSphereBounds.cpp  Color.cpp  ColorList.cpp  Matrix.cpp  SHMath.cpp  SolidAngleMath.cpp  Sphere.cpp  Transform.cpp  TransformVectorized.cpp  UnitConversion.cpp  UnrealMath.cpp
Engine/Source/Runtime/Core/Private/Misc/: AES.cpp  App.cpp  AssertionMacros.cpp  AutomationTest.cpp  Base64.cpp  BufferedOutputDevice.cpp  CommandLine.cpp  Compression.cpp  ConfigCacheIni.cpp  ConfigManifest.cpp  CoreDelegates.cpp  CoreGlobals.cpp  CoreMisc.cpp  Crc.cpp  DateTime.cpp  DefaultValueHelper.cpp  EngineBuildSettings.cpp  EngineVersion.cpp  Exec.cpp  ExpressionParser.cpp  FbxErrors.cpp  FeedbackContext.cpp  FeedbackContextMarkup.cpp  FileHelper.cpp  Guid.cpp  InteractiveProcess.cpp  LocalTimestampDirectoryVisitor.cpp  MapErrors.cpp  MemStack.cpp  MessageDialog.cpp  MonitoredProcess.cpp  NetworkVersion.cpp  ObjectThumbnail.cpp  OutputDevice.cpp  OutputDeviceAnsiError.cpp  OutputDeviceArchiveWrapper.cpp  OutputDeviceDebug.cpp  OutputDeviceFile.cpp  OutputDeviceHelper.cpp  OutputDeviceMemory.cpp  (+15 more)
Engine/Source/Runtime/Core/Private/Modules/: ModuleManager.cpp
Engine/Source/Runtime/Core/Private/ProfilingDebugging/: ProfilingHelpers.cpp
Engine/Source/Runtime/Core/Private/Stats/: Stats2.cpp  (+5 more)
Engine/Source/Runtime/Core/Public/: Core.h  CoreFwd.h  CoreGlobals.h  CoreMinimal.h  CoreTypes.h
(+899 files in other folders)
